Modify project details

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                                     <div class="card-body"
                                     style="color: #ffd15c">
                                         <h5 class="card-title" style="text-align: center;">
-                                            FRIEND LOCATION
+                                            FRIEND'S LOCATION
                                         </h5>
                                         <h6
                                             class="card-subtitle mb-2 text-muted"
