--- a/index.html
+++ b/index.html
@@ -756,9 +756,8 @@
 
                                 <p style="color: #1ABC9C; font-size: 1rem;">
                                     <span>Junior Software Developer Trainee</span>
-                                  
-
-
+                                     <span class="float-right"><i class="fas fa-calendar"></i>
+                                        Jan 2020 - May 2021</span>
                                 <p>
 
                                 <p>
