--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
                 <!-- social icons -->
                 <ul class="social-icons light list-inline mb-0 mt-4">
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/balpreet-ss/"
-                        target="_blank"><i class="fab fa-fw fa-linkedin-in" style="color: #ffd15c;"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/balpreet-singh-sandhu/" 
+                            target="_blank"><i class="fab fa-fw fa-linkedin-in" style="color: #ffd15c;"></i></a>
 
                     <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/BSS13" target="_blank"><i
                             class="fab fa-fw fa-github"></i></a>
@@ -991,7 +991,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0 text-center">
                         <h4 class="text-uppercase mb-4">Connect</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/balpreet-ss/"
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/balpreet-singh-sandhu/"
                             target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/BSS13"><i
                                 class="fab fa-fw fa-github"></i></a>
